--- a/.github/workflows/ochami.yml
+++ b/.github/workflows/ochami.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Attest Binaries
         uses: github-early-access/generate-build-provenance@main
         with:
-          subject-path: dist/smd*
+          subject-path: dist/cloud-init*
       - name: generate build provenance
         uses: github-early-access/generate-build-provenance@main
         with:
