--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -16,10 +16,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Go 1.21
+      - name: Set up latest stable Go
         uses: actions/setup-go@v5
         with:
-          go-version: 1.21
+          go-version: stable
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Docker Login
@@ -33,6 +33,14 @@ jobs:
         with:
           fetch-tags: 1
           fetch-depth: 0
+      # Set environment variables required by GoReleaser
+      - name: Set build environment variables
+        run: |
+          echo "GIT_STATE=$(if git diff-index --quiet HEAD --; then echo 'clean'; else echo 'dirty'; fi)" >> $GITHUB_ENV
+          echo "BUILD_HOST=$(hostname)" >> $GITHUB_ENV
+          echo "GO_VERSION=$(go version | awk '{print $3}')" >> $GITHUB_ENV
+          echo "BUILD_USER=$(whoami)" >> $GITHUB_ENV
+          echo "CGO_ENABLED=0" >> $GITHUB_ENV
       - name: Release with goreleaser
         uses: goreleaser/goreleaser-action@v5
         env:
