--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -5,6 +5,7 @@ before:
   hooks:
     # You may remove this if you don't use go modules.
     - go mod tidy
+    - swag init -g cmd/cloud-init-server/main.go
 
 builds:
   - id: cloud-init
