feat(quackstore): implement QuackStore for persistent storage with tests
- Added QuackStore implementation for managing groups, instances, and cluster defaults using Quack for persistence.
- Introduced unit tests for QuackStore to ensure functionality and data integrity.
- Updated go.mod to include new dependencies and replaced the quack module path.
- Enhanced CloudConfigFile JSON marshaling and unmarshaling for better encoding handling.

test(memstore): add unit tests for MemStore implementation

- Introduced a new test file for MemStore to validate its functionality.
- Integrated standard test suite from cistore testing package to ensure comprehensive testing.

feat(cloud-init-server): add support for multiple storage backends

- Introduced a new command-line flag for selecting the storage backend (mem or quack).
- Default storage backend set to memstore, with a new option for quackstore using a specified database path.
- Updated the datastore initialization logic to handle both memstore and quackstore, including error handling for quackstore initialization.

fix: correct UnmarshalJSON and add MarshalJSON for CloudConfigFile

chore: clarify comments in custom marshal/unmarshal funcs

test: add unit tests for CloudConfigFile JSON marshal/unmarshal

fix(tests): use base64-encoded data for base64 marshal test

refactor: Use an alternate Unmarshal implementation

chore: add base64 encoding import for future functionality

refactor: simplify UnmarshalJSON and add MarshalJSON for CloudConfigFile

- Removed base64 encoding handling from UnmarshalJSON for clarity.
- Added MarshalJSON implementation to ensure proper JSON serialization of CloudConfigFile.

feat(quackstore): implement unique instance ID generation

- Added functionality to generate a unique instance ID in the format "i-XXXXXX" using a random 6-digit hexadecimal string.
- Updated the comment to clarify the instance ID generation process.

fix: correct UnmarshalJSON and add MarshalJSON for CloudConfigFile

ch

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,14 +1,14 @@
-
-version: 2.4
+version: 2
 project_name: cloud-init
 before:
   hooks:
     # You may remove this if you don't use go modules.
     - go mod tidy
+    - go install github.com/swaggo/swag/cmd/swag@latest
     - swag init -g cmd/cloud-init-server/main.go
 
 builds:
-  - id: cloud-init
+  - id: linux
     main: ./cmd/cloud-init-server
     binary: cloud-init-server
     # export GIT_STATE=$(if git diff-index --quiet HEAD --; then echo 'clean'; else echo 'dirty'; fi)
@@ -27,14 +27,17 @@ builds:
          -X 'main.BuildUser={{ .Env.BUILD_USER }}'"
     goos:
       - linux
-      - darwin
     goarch:
       - amd64
       - arm64
     goamd64:
       - v3
+      - v1
     env:
-      - CGO_ENABLED=0
+      - CGO_ENABLED=1
+      - CC={{ if eq .Arch "arm64" }}aarch64-linux-gnu-gcc{{ else }}gcc{{ end }}
+      - CXX={{ if eq .Arch "arm64" }}aarch64-linux-gnu-g++{{ else }}g++{{ end }}
+
 
 dockers:
   - image_templates:
@@ -125,5 +128,5 @@ changelog:
 
 # The lines beneath this are called `modelines`. See `:help modeline`
 # Feel free to remove those if you don't want/use them.
-# yaml-language-server: $schema=https://goreleaser.com/static/schema.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/goreleaser/goreleaser/v2.11.2/www/docs/static/schema.json
 # vim: set ts=2 sw=2 tw=0 fo=cnqoj
