feat: enhance netboot server with versioning and QuackStore integration
- Added QuackStore for persistent storage of boot parameters, supporting versioning and group templates.
- Implemented API endpoints for managing boot parameters, including creation, retrieval, updating, and versioning.
- Introduced a version command to display build information and server version.
- Updated .goreleaser.yaml to support new archive formats (zip and tar.gz).
- Enhanced documentation with new fields and API specifications in swagger and Go code.
- Added tests for QuackStore functionality to ensure data integrity and operations.

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -123,7 +123,9 @@ docker_manifests:
       - *arm64v8_linux_image
 
 archives:
-  - format: tar.gz
+  - formats:
+      - tar.gz
+      - zip
     # this name template makes the OS and Arch compatible with the results of uname.
     name_template: >-
       {{ .ProjectName }}_
@@ -142,6 +144,7 @@ checksum:
   name_template: 'checksums.txt'
 snapshot:
   version_template: "{{ incpatch .Version }}-next"
+
 changelog:
   sort: asc
   filters:
