--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -10,7 +10,7 @@ permissions: write-all # Necessary for the generate-build-provenance action with
 
 jobs:
   release:
-    uses: OpenCHAMI/github-actions/workflows/go-build-release.yml@v2
+    uses: OpenCHAMI/github-actions/.github/workflows/go-build-release.yml@v3
     with:
       cgo-enabled: "1"
       pre-build-commands: |
